--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -1,5 +1,4 @@
 
-# music_directory         "/media/Shared/Music/"
 playlist_directory      "~/.mpd/playlists"
 db_file                 "~/.mpd/mpd.db"
 log_file                "~/.mpd/mpd.log"
@@ -7,9 +6,16 @@ pid_file                "~/.mpd/mpd.pid"
 state_file              "~/.mpd/mpd.state"
 auto_update             "yes"
 
+samplerate_converter "0"
+
 audio_output {
   type "alsa"
-  name "Alsa"
+  name "HDS Intel"
+  options "dev=dmixer"
+  device "plug:dmix"
+  format "44100:16:2"
+  auto_resample "no"
+  use_mmap "yes"
 }
 
 audio_output {
