--- a/mpd/ncmpcpp.conf
+++ b/mpd/ncmpcpp.conf
@@ -144,7 +144,7 @@ visualizer_output_name = "my_fifo"
 #
 #song_list_format = "{%a - }{%t}|{$8%f$9}$R{$3(%l)$9}"
 #
-song_status_format = "{{%a{ » %b} » }{%t}}|{%f}"
+# song_status_format = "{{%a{ » %b} » }{%t}}|{%f}"
 #
 #song_library_format = "{%n - }{%t}|{%f}"
 #
@@ -237,7 +237,7 @@ song_status_format = "{{%a{ » %b} » }{%t}}|{%f}"
 ## Attention: It doesn't support song format anymore.
 ## Use `ncmpcpp --now-playing SONG_FORMAT` instead.
 ##
-#execute_on_song_change = ""
+execute_on_song_change = "notify-send \"$(ncmpcpp --now-playing '{%a - %t}')\""
 #
 #playlist_show_remaining_time = "no"
 #
@@ -268,7 +268,7 @@ search_engine_display_mode = "columns"
 ## Note: You can specify third character which will
 ## be used to build 'empty' part of progressbar.
 ##
-progressbar_look = "–– "
+# progressbar_look = "–– "
 #
 #default_place_to_search_in = "database" (database/playlist)
 #
