--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,10 +4,10 @@ bind C-f send-prefix
 unbind C-b
 
 # Mouse
-# set -g mode-mouse on
-# set-option -g mouse-utf8 on
-# set-option -g mouse-select-pane on
-# set-option -g mouse-select-window on
+set -g mode-mouse on
+set-option -g mouse-utf8 on
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
 
 # basic settings
 set -s escape-time 0
@@ -21,8 +21,8 @@ set-option -g default-command "zsh"
 
 # set-option -g status-keys vi
 # set-window-option -g mode-keys vi # vi key
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-selection
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-selection
 # bind-key -t vi-copy Escape cancel
 
 set-window-option -g utf8 on # utf8 support
@@ -38,7 +38,7 @@ bind C-c run "tmux show-buffer | xclip -selection clipboard -i"
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # move tmux copy buffer into x clipboard
-# bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip"
+bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip -selection clipboard -i"
 
 # splitting and cycling
 unbind %
@@ -76,12 +76,6 @@ set-option -g set-titles on
 set-option -g set-titles-string '#S:#I.#P #W' # window number,program name,active (or not)
 set-window-option -g automatic-rename on # auto name
 
-# messages
-#set-window-option -g mode-bg magenta
-#set-window-option -g mode-fg black
-#set-option -g message-bg magenta
-#set-option -g message-fg black
-
 # No visual activity
 set -g visual-activity off
 set -g visual-bell off
@@ -92,17 +86,26 @@ bind-key -n C-right next
 #previous tab
 bind-key -n C-left prev
 
-set-option -g pane-active-border-fg cyan
+# appearance
+set-option -g window-status-activity-attr bold
+set-option -g pane-border-bg colour245
+set-option -g pane-active-border-fg colour39
+
+set-option -g message-bg colour16
+set-option -g message-fg colour221
+set-option -g message-attr bold
+
 # status bar
 set-option -g status-utf8 on
 set-option -g status-justify left
-set-option -g status-bg black
-set-option -g status-fg cyan
+set-option -g status-bg colour234
+set-option -g status-fg white
 set-option -g status-interval 5
 set-option -g status-left-length 30
+set-option -g status-right-length 150
 
-set-option -g status-left '#[fg=blue,bold]#T #[fg=cyan]»#[default]'
-set-option -g status-right '#[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(battery_info)#[default]'
+set-option -g status-left '#[fg=colour16,bg=colour254,bold] #h #[fg=colour234,bg=colour39] #S '
+set-option -g status-right '#(mpd-current-track-tmux)#(battery_info)#[fg=colour16,bg=colour254,bold] %R %m-%d '
 
 # clock
 set-window-option -g clock-mode-colour cyan
