--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,7 +15,7 @@ set -g base-index 1
 set-window-option -g monitor-activity off
 set-window-option -g window-status-current-fg white
 
-# set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set -g terminal-overrides '*:smcup@:rmcup@'
 set-option -g default-command "zsh"
 
@@ -57,8 +57,8 @@ bind C-j resize-pane -D 5
 bind C-k resize-pane -U 5
 bind C-l resize-pane -R 5
 
-bind -n M-h previous-window
-bind -n M-l next-window
+# bind -n M-h previous-window
+# bind -n M-l next-window
 bind C-l last-window
 
 bind -n M-1 select-window -t 1
