--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,10 +4,17 @@ bind C-f send-prefix
 unbind C-b
 
 # Mouse
-set -g mode-mouse on
-set-option -g mouse-utf8 on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
+set -g mouse on
+
+# set mouse on with prefix m
+bind m \
+  set -g mouse on \;\
+  display 'Mouse: ON'
+
+# set mouse off with prefix M
+bind M \
+  set -g mouse off \;\
+  display 'Mouse: OFF'
 
 # basic settings
 set -s escape-time 0
@@ -21,11 +28,10 @@ set-option -g default-command "zsh"
 
 # set-option -g status-keys vi
 # set-window-option -g mode-keys vi # vi key
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-selection
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-selection
 # bind-key -t vi-copy Escape cancel
 
-set-window-option -g utf8 on # utf8 support
 set-window-option -g aggressive-resize on
 
 # copy mode to escape key
@@ -44,8 +50,8 @@ bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | x
 unbind %
 unbind '"'
 
-bind | set default-path $PWD \; split-window -h \; set default-path ~/ # horizontal split
-bind - set default-path $PWD \; split-window -v \; set default-path ~/ # vertical split
+bind | split-window -h -c '#{pane_current_path}' \; set default-path ~/ # horizontal split
+bind - split-window -v -c '#{pane_current_path}' \; set default-path ~/ # vertical split
 
 bind h select-pane -L
 bind j select-pane -D
@@ -96,7 +102,6 @@ set-option -g message-fg colour221
 set-option -g message-attr bold
 
 # status bar
-set-option -g status-utf8 on
 set-option -g status-justify left
 set-option -g status-bg colour234
 set-option -g status-fg white
